--- a/2.html
+++ b/2.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<header>
+    <nav>
+        <a href="1.html">1</a>
+        <a href="2.html " target="_blank">2</a>
+        <a href="3.html " target="_blank">3</a>
+        <a href="4.html " target="_blank">4</a>
+        <a href="5.html " target="_blank">5</a>
+    </nav>
+</header>
+<ul class="li"></ul>
+
+<script  src="2.js"></script>
 </body>
 </html>
