--- a/1.html
+++ b/1.html
@@ -8,7 +8,17 @@
     <title>Document</title>
 </head>
 <body>
+<header>
+    <nav>
+        <a href="1.html">1</a>
+        <a href="2.html " target="_blank">2</a>
+        <a href="3.html " target="_blank">3</a>
+        <a href="4.html " target="_blank">4</a>
+        <a href="5.html " target="_blank">5</a>
+    </nav>
+</header>
+<ul class="list"></ul>
 
-<script type="module" src="index.js"></script>
+<script  src="1.js"></script>
 </body>
 </html>
