--- a/2.html
+++ b/2.html
@@ -3,6 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #3498db;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            padding: 20px;
+        }
+        a{
+            text-decoration: none;
+            background-color: #e74c3c;
+            padding: 20px;
+            border-radius: 200%;
+        }
+        ul{
+            list-style: none;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            gap : 10px;
+        }
+    </style>
 </head>
 <body>
 <header>
